# Pos80_SDK_GongJiao

./: build.gradle  local.properties  settings.gradle
alipay/: CMakeLists.txt  build.gradle
alipay/src/androidTest/java/com/spd/alipay/: ExampleInstrumentedTest.java
alipay/src/main/: AndroidManifest.xml
alipay/src/main/cpp/: alipay.c  alipay.h  pos_crypto.h
alipay/src/main/java/com/spd/alipay/: AlipayActivity.java  AlipayContract.java  AlipayJni.java  AlipayPresenter.java  Datautils.java
alipay/src/main/java/com/spd/alipay/IAlipay/: AalipayInterface.java
alipay/src/main/java/com/spd/alipay/been/: AliCodeinfoData.java  AlipayPublicKey.java  AlipayUploadBeen.java  PayUploadResult.java  TianjinAlipayRes.java
alipay/src/main/java/com/spd/alipay/mvp/: BasePresenter.java  BasePresenterImpl.java  BaseView.java  MVPBaseActivity.java  MVPBaseFragment.java
alipay/src/main/java/com/spd/alipay/net/: AlipayApi.java  AlipayApi2.java  AlipayService.java  LogInterceptor.java  Url.java
alipay/src/main/res/layout/: alipay_layout.xml
alipay/src/test/java/com/spd/alipay/: ExampleUnitTest.java
app/: build.gradle
bosipay/: CMakeLists.txt  build.gradle
bosipay/src/androidTest/java/com/spd/bosipay/: ExampleInstrumentedTest.java
bosipay/src/main/: AndroidManifest.xml
bosipay/src/main/cpp/: QRCodeModule.h  bosipay.cpp  bosipays.c
bosipay/src/main/java/com/spd/bosipay/: BosiPayJni.java  BositestActivity.java
bosipay/src/main/res/layout/: activity_bositest.xml
bosipay/src/main/res/values/: strings.xml
bosipay/src/test/java/com/spd/bosipay/: ExampleUnitTest.java
(+540 files in other folders)
